# SMART_OPC_UA

./: Notes.md  README.md  README.md.bak  build_deb.sh  opc_server.py  tags.csv
0.1a_py/: opc_server.py
backup/: opc_server.py  opc_server_TEST.py
um_opcua/: CMakeLists.txt  deploy.sh
um_opcua/config/: API.cfg  tags-M230-example.csv  tags-example.csv  tags.csv  tags_ВИСТ.csv  tags_ВИСТ_ТС400.csv
um_opcua/src/: api_client.c  api_client.h  api_config.c  api_config.h  common.h  main.c  main.c.bak  opc_history.c  opc_history.h  opc_nodes.c  opc_nodes.h  tag_config.c  tag_config.h
